Rechtschreibkorrekturen, nicht benötigte Befehl entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1749 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zumbusch-gleichungssysteme/skript.tex
+++ b/zumbusch-gleichungssysteme/skript.tex
@@ -1,8 +1,9 @@
+\RequirePackage[l2tabu,orthodox]{nag}
 \documentclass[halfparskip,pointednumbers,smallheadings,headsepline,footsepline]{scrreprt}
 \usepackage[ngerman]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[latin1]{inputenc}
-\usepackage{amsmath,amsthm,times,amssymb,xspace,url,svn,color}
+\usepackage{amsmath,amsthm,times,amssymb,xspace,url,svn,color,fixmath}
 
 \theoremstyle{definition}
 
@@ -10,150 +11,38 @@
 \theoremstyle{remark}
 \newtheorem*{bsp}{Beispiel}
 
+\newcommand*{\bR}{\ensuremath{\mathbb{R}}\xspace}
+\newcommand*{\cO}{\ensuremath{\mathcal{O}}\xspace}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% MATHE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Mengensymbole                                                           %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\bN}{\ensuremath{\mathbb{N}}\xspace}
-\newcommand{\bQ}{\ensuremath{\mathbb{Q}}\xspace}
-\newcommand{\bR}{\ensuremath{\mathbb{R}}\xspace}
-\newcommand{\bC}{\ensuremath{\mathbb{C}}\xspace}
-\newcommand{\bH}{\ensuremath{\mathbb{H}}\xspace}
-\newcommand{\bF}{\ensuremath{\mathbb{F}}\xspace}
-\newcommand{\bZ}{\ensuremath{\mathbb{Z}}\xspace}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Transponieren                                                           %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\tr}{^\top}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Wahrscheinlichkeitstheorie                                              %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\wP}{\ensuremath{\mathbf{P}}\xspace}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% cal- und frak- Alphabete in Kurzform                                    %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcommand{\fA}{\ensuremath{\mathfrak{A}}\xspace}
-\newcommand{\fB}{\ensuremath{\mathfrak{B}}\xspace}
-\newcommand{\fC}{\ensuremath{\mathfrak{C}}\xspace}
-\newcommand{\fD}{\ensuremath{\mathfrak{D}}\xspace}
-\newcommand{\fE}{\ensuremath{\mathfrak{E}}\xspace}
-\newcommand{\fF}{\ensuremath{\mathfrak{F}}\xspace}
-\newcommand{\fG}{\ensuremath{\mathfrak{G}}\xspace}
-\newcommand{\fH}{\ensuremath{\mathfrak{H}}\xspace}
-\newcommand{\fI}{\ensuremath{\mathfrak{I}}\xspace}
-\newcommand{\fJ}{\ensuremath{\mathfrak{J}}\xspace}
-\newcommand{\fK}{\ensuremath{\mathfrak{K}}\xspace}
-\newcommand{\fL}{\ensuremath{\mathfrak{L}}\xspace}
-\newcommand{\fM}{\ensuremath{\mathfrak{M}}\xspace}
-\newcommand{\fN}{\ensuremath{\mathfrak{N}}\xspace}
-\newcommand{\fO}{\ensuremath{\mathfrak{O}}\xspace}
-\newcommand{\fP}{\ensuremath{\mathfrak{P}}\xspace}
-\newcommand{\fQ}{\ensuremath{\mathfrak{Q}}\xspace}
-\newcommand{\fR}{\ensuremath{\mathfrak{R}}\xspace}
-\newcommand{\fS}{\ensuremath{\mathfrak{S}}\xspace}
-\newcommand{\fT}{\ensuremath{\mathfrak{T}}\xspace}
-\newcommand{\fU}{\ensuremath{\mathfrak{U}}\xspace}
-\newcommand{\fV}{\ensuremath{\mathfrak{V}}\xspace}
-\newcommand{\fW}{\ensuremath{\mathfrak{W}}\xspace}
-\newcommand{\fX}{\ensuremath{\mathfrak{X}}\xspace}
-\newcommand{\fY}{\ensuremath{\mathfrak{Y}}\xspace}
-\newcommand{\fZ}{\ensuremath{\mathfrak{Z}}\xspace}
-
-\newcommand{\cA}{\ensuremath{\mathcal{A}}\xspace}
-\newcommand{\cB}{\ensuremath{\mathcal{B}}\xspace}
-\newcommand{\cC}{\ensuremath{\mathcal{C}}\xspace}
-\newcommand{\cD}{\ensuremath{\mathcal{D}}\xspace}
-\newcommand{\cE}{\ensuremath{\mathcal{E}}\xspace}
-\newcommand{\cF}{\ensuremath{\mathcal{F}}\xspace}
-\newcommand{\cG}{\ensuremath{\mathcal{G}}\xspace}
-\newcommand{\cH}{\ensuremath{\mathcal{H}}\xspace}
-\newcommand{\cI}{\ensuremath{\mathcal{I}}\xspace}
-\newcommand{\cJ}{\ensuremath{\mathcal{J}}\xspace}
-\newcommand{\cK}{\ensuremath{\mathcal{K}}\xspace}
-\newcommand{\cL}{\ensuremath{\mathcal{L}}\xspace}
-\newcommand{\cM}{\ensuremath{\mathcal{M}}\xspace}
-\newcommand{\cN}{\ensuremath{\mathcal{N}}\xspace}
-\newcommand{\cO}{\ensuremath{\mathcal{O}}\xspace}
-\newcommand{\cP}{\ensuremath{\mathcal{P}}\xspace}
-\newcommand{\cQ}{\ensuremath{\mathcal{Q}}\xspace}
-\newcommand{\cR}{\ensuremath{\mathcal{R}}\xspace}
-\newcommand{\cS}{\ensuremath{\mathcal{S}}\xspace}
-\newcommand{\cT}{\ensuremath{\mathcal{T}}\xspace}
-\newcommand{\cU}{\ensuremath{\mathcal{U}}\xspace}
-\newcommand{\cV}{\ensuremath{\mathcal{V}}\xspace}
-\newcommand{\cW}{\ensuremath{\mathcal{W}}\xspace}
-\newcommand{\cX}{\ensuremath{\mathcal{X}}\xspace}
-\newcommand{\cY}{\ensuremath{\mathcal{Y}}\xspace}
-\newcommand{\cZ}{\ensuremath{\mathcal{Z}}\xspace}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Deutsche Operatoren                                                     %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\DeclareMathOperator{\Id}{Id}
-\DeclareMathOperator{\kgV}{kgV}
-\DeclareMathOperator{\ggT}{ggT}
-\DeclareMathOperator{\Bild}{Bild}
-\DeclareMathOperator{\Kern}{Kern}
-\DeclareMathOperator{\Bahn}{Bahn}
-\DeclareMathOperator{\Stab}{Stab}
-\DeclareMathOperator{\Var}{Var}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% im Deutschen übliche griech. Buchstaben                                 %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \let\epsilon\varepsilon
 \let\phi\varphi
 \let\rho\varrho
 \let\kappa\varkappa
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Mengenlehre                                                             %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \let\emptyset\varnothing
 \let\subset\subseteq
 \let\subsetneq\subsetneqq
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% kurze Matrixbefehle mit ensuremath, kleine Matrizen                     %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcommand{\pmat}[1]{\ensuremath{\begin{pmatrix} #1 \end{pmatrix}}\xspace}
-\newcommand{\bmat}[1]{\ensuremath{\begin{bmatrix} #1 \end{bmatrix}}\xspace}
-\newcommand{\vmat}[1]{\ensuremath{\begin{vmatrix} #1 \end{vmatrix}}\xspace}
-\newcommand{\Bmat}[1]{\ensuremath{\begin{Bmatrix} #1 \end{Bmatrix}}\xspace}
-\newcommand{\Vmat}[1]{\ensuremath{\begin{Vmatrix} #1 \end{Vmatrix}}\xspace}
-\newcommand{\kpmat}[1]{\ensuremath{\left(\begin{smallmatrix} #1 \end{smallmatrix}\right)}\xspace}
-\newcommand{\kbmat}[1]{\ensuremath{\left[\begin{smallmatrix} #1 \end{smallmatrix}\right]}\xspace}
-\newcommand{\kBmat}[1]{\ensuremath{\left\{\begin{smallmatrix} #1 \end{smallmatrix}\right\}}\xspace}
-\newcommand{\kvmat}[1]{\ensuremath{\left|\begin{smallmatrix} #1 \end{smallmatrix}\right|}\xspace}
-\newcommand{\kVmat}[1]{\ensuremath{\left\|\begin{smallmatrix} #1 \end{smallmatrix}\right\|}\xspace}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
-
-
-
+\newcommand*{\pmat}[1]{\ensuremath{\begin{pmatrix} #1 \end{pmatrix}}\xspace}
+\newcommand*{\bmat}[1]{\ensuremath{\begin{bmatrix} #1 \end{bmatrix}}\xspace}
+\newcommand*{\vmat}[1]{\ensuremath{\begin{vmatrix} #1 \end{vmatrix}}\xspace}
+\newcommand*{\Bmat}[1]{\ensuremath{\begin{Bmatrix} #1 \end{Bmatrix}}\xspace}
+\newcommand*{\Vmat}[1]{\ensuremath{\begin{Vmatrix} #1 \end{Vmatrix}}\xspace}
+\newcommand*{\kpmat}[1]{\ensuremath{\left(\begin{smallmatrix} #1 \end{smallmatrix}\right)}\xspace}
+\newcommand*{\kbmat}[1]{\ensuremath{\left[\begin{smallmatrix} #1 \end{smallmatrix}\right]}\xspace}
+\newcommand*{\kBmat}[1]{\ensuremath{\left\{\begin{smallmatrix} #1 \end{smallmatrix}\right\}}\xspace}
+\newcommand*{\kvmat}[1]{\ensuremath{\left|\begin{smallmatrix} #1 \end{smallmatrix}\right|}\xspace}
+\newcommand*{\kVmat}[1]{\ensuremath{\left\|\begin{smallmatrix} #1 \end{smallmatrix}\right\|}\xspace}
 
 \SVN $Revision$
 \SVN $Date$
+\SVN $LastChangedRevision$
+\SVN $LastChangedDate$
 
 \begin{document}
 \pagestyle{headings}
 \title{Schnelle iterative Löser großer schwach besetzter linearer Gleichungssysteme}
-\author{Professor Dr. G. W. Zumbusch\\FSU Jena}
+\author{Professor\,Dr.\,G. W. Zumbusch\\FSU Jena}
 \date{}
 \maketitle
 
@@ -246,7 +135,7 @@ Gesamtaufwand im parallelen Verfahren: $\cO\left(\frac{n}{P} + \log P\right)$. F
 \section{Kommunizierende sequentielle Prozesse}
 
 \begin{defi}[Sequentieller Prozess]
-Abstraktion, Ausführen eines sequentiellen Programms. Jederzeit klarer Zustand. Genau ein Befehlszähler (PC, Programm Counter) und Variablen (Speicher, Register).
+Abstraktion, Ausführen eines sequentiellen Programms. Jederzeit klarer Zustand. Genau ein Befehlszähler (PC, Program Counter) und Variablen (Speicher, Register).
 \end{defi}
 
 \begin{defi}[Paralleles Programm]
