--- a/vorlage/skript.ltx
+++ b/vorlage/skript.ltx
@@ -61,6 +61,7 @@
 \usepackage{ellipsis}    % Korrektur für \dots
 \usepackage{fixltx2e}
 \usepackage[final,babel]{microtype} % Verbesserung der Typographie
+\usepackage{mathtools}   % Zur Definition von \abs und \norm
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -156,12 +157,12 @@
 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
 			       {$gdw_{def}$\xspace}}
 
-% Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
+% Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
-% ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+% rechten Striche vergessen und es wird etwas übersichtlicher. Aus
+% mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
