kleinere Schreibfehler ausgebessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1755 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -332,10 +332,10 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   Manchmal werden Umgebungen gleich als offen definiert. In dieser Vorlesung
   wird der Schritt nicht vollzogen.
 
-  Für $A\colon=\{x\}$ mit $x\in X$ schreibt man $U_{x}$ für $U$.
+  Für $A\colon=\{x\}$ mit $x\in X$ schreibt man $U_{x}$ für die Umgebung.
 
   Der metrische Begriff der Umgebung ist "`feiner"' als der topologische. Dort
-  beinhaltet es auch Längemessung.
+  beinhaltet es auch Längenmessung.
 \end{bemerk}
 
 %def 1.6
@@ -352,7 +352,7 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
 %def 1.7
 \begin{defini}
   Ein Punkt $x\in X$ heißt \highl{Berührungspunkt} von $A$ bezüglich $\CT$,
-  falls jede Umgebung von $X$ einen nichtleeren Durchschnitt mit $A$ hat.
+  falls jede Umgebung von $x$ einen nichtleeren Durchschnitt mit $A$ hat.
 
   Die Menge $\overline{A}$ aller Berührungspunkte von $A$ heißt \highl{Abschluss} oder
   \highl[Hülle!abgeschlossene]{abgeschlossene Hülle}.
@@ -370,13 +370,13 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}[(i)]
-     \item $\forall x\in \accentset{\circ}{A} \exists U_{x}\in\CT$ mit
+     \item $\forall x\in \accentset{\circ}{A}\,\exists U_{x}\in\CT$ mit
       $U_{x}\subset A\Rightarrow \accentset{\circ}{A} \subset\bigcup_{x\in \accentset{\circ}{A}} U_{x}$. Nun
       ist $U_{x}$ aber auch Umgebung für jedes $y\in U_{x}$. Somit ist $y\in
       \accentset{\circ}{A}$. Also ist $\accentset{\circ}{A}=\bigcup_{x\in \accentset{\circ}{A}}U_{x}$.
      \item Wir zeigen $\overline{\overline{A}}=\overline{A}$. Klar ist, dass
       $\overline{A}\subset\overline{\overline{A}}$. Sei
-      $x\in\overline{\overline{A}}\Rightarrow\forall U_{x}\in\CT\exists
+      $x\in\overline{\overline{A}}\Rightarrow\forall U_{x}\in\CT\,\exists
       y\in\overline{A}$ mit $y\in U_{x}$. Aber $U_{x}$ ist auch Umgebung von
       $y\Rightarrow U_{x}\cap A\neq\emptyset\Rightarrow x\in\overline{A}$.
       Also ist $\overline{\overline{A}}\subset\overline{A}$.
@@ -440,7 +440,7 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   \end{proof}
 
   \begin{enumerate}[(i)]
-   \item $A\subset B\Rightarrow \accentset{\circ}{A}\subset B^{o}$
+   \item $A\subset B\Rightarrow \accentset{\circ}{A}\subset \accentset{\circ}{B}$
    \item Sei $I\neq\emptyset$ beliebig. Dann ist $(\bigcap_{i\in I}
     A_{i})^{o}\subset\bigcap_{i\in I} \accentset{\circ}{A}_{i}, \bigcup_{i\in I}
     \accentset{\circ}{A}_{i}\subset (\bigcup_{i\in I} A_{i})^{o}$
@@ -483,11 +483,11 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
  \item Sei $(X,d)$ ein metrischer Raum. Dann ist $U\subset X$ genau dann
   offen, wenn $\forall x\in U\,\exists\epsilon>0\colon B(x,\epsilon)\subset
   U$. Das System aller offenen Mengen sei $\CT_{d}$. Wir müssen zeigen, dass
-  $\CT_{d}$ ein Topologie ist. Sie wird auch als
+  $\CT_{d}$ eine Topologie ist. Sie wird auch als
   \highl[Topologie!induzierte]{induzierte Topologie} bezeichnet.
   \begin{enumerate}
    \item $\emptyset\in\CT$. Da $\emptyset$ offen ist, ist $\emptyset\in\CT$.
-   \item Sei $I\neq\emptyset, A_{i}\in\CT\Rightarrow\forall x\in A_{i}\exists
+   \item Sei $I\neq\emptyset, A_{i}\in\CT\Rightarrow\forall x\in A_{i}\,\exists
     B(x.\epsilon)\subset A_{i}\Rightarrow B(x,\epsilon)\in\bigcup_{i\in I}
     A_{i}\Rightarrow\bigcup_{i\in I} A_{i}$ ist offen.
    \item Seien $A_{1},\dotsc, A_{n}\in\CT$ und $x\in\bigcap_{i=1}^{n}
@@ -497,22 +497,22 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
  \item Sei $\CT$ die diskrete Topologie $\CT\colon=\FP(X)$. Wir starten mit
   $d\colon X\times X\rightarrow[0,x]$ und
   \begin{gather*}
-    d(x,x)\colon=
+    d(x,y)\colon=
        \begin{cases}
 	 0 & x=y\\
 	 1 & x\neq y
        \end{cases}
   \end{gather*}
   Dann ist $d$ eine Metrik. Denn $d(x,y)\geq0, d(x,y)=d(y,x), d(x,z)\leq
-  d(x,y)+ d(y,z)$. Weil wollen nun zeigen, dass $d$ eine Topologie induziert:
+  d(x,y)+ d(y,z)$. Wir wollen nun zeigen, dass $d$ eine Topologie induziert:
   Sei $A\subset X, x\in A$ beliebig. Dann ist $B(x,\nicefrac{1}{2})=\{y\in
   X\colon d(x,y)<\nicefrac{1}{2}\}=\{x\}\subset A\Rightarrow\forall A\subset
   X\colon A$ offen. Also folgt, dass $\CT_{d}=\CT=\FP(X)$.
  \item
   \begin{enumerate}
-   \item Sei $X\neq\emptyset, E$ die Menge aller bechränkten reellwertigen
+   \item Sei $X\neq\emptyset, E$ die Menge aller beschränkten reellwertigen
     Funktionen auf $X$. Es ist $d(f,g)\colon=\sup_{x\in X} \abs{g(x)-f(x)}$
-    für $f,g\in E$ eine etrik. Denn $d(f,g)\geq0, d(f,g)=d(g,f),
+    für $f,g\in E$ eine Metrik. Denn $d(f,g)\geq0, d(f,g)=d(g,f),
     d(f,h)\leq\sup_{x\in X}(\abs{h(x)-g(x)}+\abs{g(x)-f(x)})\leq\sup_{x\in X}
     \abs{h(x)-g(x)}+\sup_{x\in X}\abs{g(x)-f(x)}=d(h,g)+d(g,h)$.
    \item Sei $E$ die Menge aller reellwertigen beschränkten und stetigen
