Vollständig nach UTF‐8 konvertieren
Nicht alle Umlaute waren in UTF‐8 kodiert. Da bei inputenc utf8 angegeben
ist, vermute ich, dass das gesamte Dokument in UTF‐8 seien soll.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1756 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schumacher-statver/skript.ltx
+++ b/schumacher-statver/skript.ltx
@@ -1,18 +1,18 @@
-% Einige zusätzliche Informationen für rubber
+% Einige zusÃ¤tzliche Informationen fÃ¼r rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
 % rubber: clean $base.thm
-%  rubber soll nach Änderungen an der Datei nochmal bauen
+%  rubber soll nach Ã¤nderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
 %
-% scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
+% scrreprt trifft am Besten die BedÃ¼rfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
-% unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
-% von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
+% unterschieden, und wir verwenden zwischen den AbsÃ¤tzen einen Abstand
+% von einer halben Zeile (halfparskip) und dafÃ¼r keinen Absatzeinzug,
 % wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
 
-\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+\RequirePackage[l2tabu,orthodox]{nag}  % nag Ã¼berprÃ¼ft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
@@ -20,7 +20,7 @@
 
 \usepackage{ifthen}
 \usepackage{makeidx}
-% \usepackage[final]{graphicx}  % Für Grafiken
+% \usepackage[final]{graphicx}  % FÃ¼r Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
@@ -31,60 +31,60 @@
 
 \usepackage{lmodern}		% Latin Modern
 % \usepackage{type1ec}           % cm-super
-\usepackage[T1]{fontenc}        % T1-Schriften notwendig für PDFs
-\usepackage{textcomp}           % wird benötigt, damit der \textbullet
-                                % für itemize in lmodern gefunden wird.
+\usepackage[T1]{fontenc}        % T1-Schriften notwendig fÃ¼r PDFs
+\usepackage{textcomp}           % wird benÃ¶tigt, damit der \textbullet
+                                % fÃ¼r itemize in lmodern gefunden wird.
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
                                        % amsmath-Umgebungen z.\,B. $$...$$
-\usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{amssymb}     % wird fÃ¼r \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 
-\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % fÃ¼r die Theorem-Umgebungen
                                                  % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
-\usepackage{slashbox}    % für schräge Striche links oben in der
+\usepackage{slashbox}    % fÃ¼r schrÃ¤ge Striche links oben in der
                          % Tabelle; s. texdoc slashbox
 
 \usepackage{paralist}    % besseres enumerate und itemize und neue
                          % compactenum/compactitem; s. texdoc paralist
 
 \usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
-                         % SVN-Schlüsselwörter (s. vor \begin{document})
-                         % dafür muss in SVN noch das Flag svn:keywords
+                         % SVN-SchlÃ¼sselwÃ¶rter (s. vor \begin{document})
+                         % dafÃ¼r muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
+% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nÃ¼tzlich zur
                          % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
-\usepackage{ellipsis}    % Korrektur für \dots
+\usepackage{ellipsis}    % Korrektur fÃ¼r \dots
 \usepackage{fixltx2e}
 \usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{nicefrac}
 
 
-% Damit auch die Zeichen im Mathemode in Überschriften fett sind
+% Damit auch die Zeichen im Mathemode in Ã¼berschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
 \addtokomafont{sectioning}{\boldmath}
 
-% nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
-% Körpers ist normal und der Kopf wird fett gesetzt
+% nach dem Theoremkopf wird ein Zeilenumbruch eingefÃ¼gt, die Schrift des
+% KÃ¶rpers ist normal und der Kopf wird fett gesetzt
 \theoremstyle{break}
 \theoremnumbering{arabic}
 \theorembodyfont{\normalfont}
 \theoremheaderfont{\normalfont\bfseries}
 
-% Das Ende von Umgebungen, für die kein Beweis erbracht wurde, soll mit einer
+% Das Ende von Umgebungen, fÃ¼r die kein Beweis erbracht wurde, soll mit einer
 % leeren Box gekennzeichnet werden. Wenn jedoch ein Beweis erbracht wurde,
-% soll kein Zeichen ausgegeben werden (die ausgefüllte Box vom proof wird
-% verwendet); man beachte die spezielle Definition von \theoremheaderfont für
+% soll kein Zeichen ausgegeben werden (die ausgefÃ¼llte Box vom proof wird
+% verwendet); man beachte die spezielle Definition von \theoremheaderfont fÃ¼r
 % die Umgebung proof
 % \newboolean{hasproof}
 % \theoremheaderfont{\global\hasprooffalse\normalfont\bfseries}
 % \theoremsymbol{\ifthenelse{\boolean{hasproof}}{}{\ensuremath{_\Box}}}
 
 % Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
-% Kapitels zurückgesetzt
+% Kapitels zurÃ¼ckgesetzt
 \newtheorem{satz}{Satz}[chapter]
 \newtheorem{bemerk}{Bemerkung}[chapter]
 \newtheorem{defini}{Definition}[chapter]
@@ -119,20 +119,20 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
+\newcommand*{\N}{\mathbb{N}}      % natÃ¼rliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
-% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
+% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, kÃ¶nnen sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
 % auszublenden, indem man den Befehl einfach leer definiert
 \newcommand*{\help}[1]{\textcolor{green}{help: #1}}
 
-% \todo ist das gleiche wie \help nur für offene Aufgaben
+% \todo ist das gleiche wie \help nur fÃ¼r offene Aufgaben
 \newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
 
-% Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
+% Um wichtige Begriffe im Text Ã¼berall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
 % automatisch als Indexeintrag verwendet. Dieser kann aber auch als
 % optionales Argument selbst bestimmt werden.
@@ -140,15 +140,15 @@
   \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
 }
 
-% Befehl für die Darstellung der Gliederungsüberschriften im Index
+% Befehl fÃ¼r die Darstellung der GliederungsÃ¼berschriften im Index
 \newcommand*{\lettergroup}[1]{\minisec{#1}}
 
-% Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
+% FÃ¼r Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
 \newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
+% Diese Befehle sind dafÃ¼r gedacht, dass die Symbole fÃ¼r "genau dann wenn"
+% im ganzen Dokument gleich aussehen. AuÃŸerdem erlaubt es eine schnelle
+% VerÃ¤nderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
 \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
 			       {\mspace{8mu}gdw\mspace{8mu}}%
@@ -159,14 +159,14 @@
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
+% rechten Striche vergessen und es wird etwas Ã¼bersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
 \newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
 \newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
-% ... und mancheinem gefällt auch das Phi nicht
+% ... und mancheinem gefÃ¤llt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 \newcommand*{\SL}{\mathcal{L}}
 
@@ -381,7 +381,7 @@ Zum Abschluss steht der Test der Hypothesen.
   \end{gather*}
 
   \begin{proof}
-    Daher müssen wir ihn auch beweisen:
+    Daher mÃ¼ssen wir ihn auch beweisen:
     \begin{align*}
       a\cdot 0 &= a\cdot(1-1)\\
       &= a-a&\text{durch ausmultiplizieren}\\
@@ -391,14 +391,14 @@ Zum Abschluss steht der Test der Hypothesen.
 \end{satz}
 
 Die Umgebung \texttt{proof} sollte immer innerhalb der Umgebung stehen, zu der
-der Beweis gehört. Das hat den Vorteil, dass man Umgebungen ohne Beweis z.\,B.
-mit $\scriptstyle\Box$ enden lassen kann, wärend Umgebungen mit Beweisen
+der Beweis gehÃ¶rt. Das hat den Vorteil, dass man Umgebungen ohne Beweis z.\,B.
+mit $\scriptstyle\Box$ enden lassen kann, wÃ¤rend Umgebungen mit Beweisen
 mit $\scriptstyle\blacksquare$ enden. Dadurch kann man im laufenden Text
-auch das Ende von Sätzen, Bemerkungen und dergleichen erkennen, was sonst
-schwer ist, da die gleiche Schrift sowohl innerhalb als auch außerhalb
+auch das Ende von SÃ¤tzen, Bemerkungen und dergleichen erkennen, was sonst
+schwer ist, da die gleiche Schrift sowohl innerhalb als auch auÃŸerhalb
 verwendet wird.
 % Man beachte die speziellen Anweisungen bei der theorem-Definition in der
-% Präampel
+% PrÃ¤ampel
 
 \begin{bemerk}
   Der ganz tolle und wichtige \autoref{satz:1} ist gar nicht so toll und
@@ -413,31 +413,31 @@ verwendet wird.
   und einfach mal "`\texttt{texdoc amsldoc}"' aufrufen.
 
   Auf \url{http://www.dante.de/CTAN/info/german/l2tabu/l2tabu.pdf} sind
-  weitere nützliche Hinweise zu finden.
+  weitere nÃ¼tzliche Hinweise zu finden.
 \end{bemerk}
 
 \begin{satz}[Verwendung von Grafiken]
   Grafiken sollten prinzipell in einem Vektorformat erstellt werden. Dazu
   eignet sich \texttt{xfig} sehr gut. Wird das Bild mit
   \texttt{\textbackslash{}includegraphics\{bild\}} eingebunden, erstellt
-  \texttt{rubber} automatisch daraus die benötigte Datei
-  -- \texttt{bild.pdf} oder \texttt{bild.eps} -- für \LaTeX{}.
+  \texttt{rubber} automatisch daraus die benÃ¶tigte Datei
+  -- \texttt{bild.pdf} oder \texttt{bild.eps} -- fÃ¼r \LaTeX{}.
 
-  Für besondere Schriften (z.\,B. mathmatische Zeichen oder
-  Hoch-/Tiefstellen) kann man in \texttt{xfig} das "`Special Flag"' für
+  FÃ¼r besondere Schriften (z.\,B. mathmatische Zeichen oder
+  Hoch-/Tiefstellen) kann man in \texttt{xfig} das "`Special Flag"' fÃ¼r
   Text setzen und das Bild mit
   \texttt{\textbackslash{}input\{bild.pdf\_t\}} einbinden. Damit wird die
   Schrift direkt von \LaTeX{} erzeugt und man hat (fast) alle
-  Möglichkeiten, die \LaTeX{} bietet. \texttt{rubber} erkennt
-  selbstständig, welches Grafikformat benötigt wird und erzeugt
-  unabhängig vom Namen das Bild als PDF oder PS.
+  MÃ¶glichkeiten, die \LaTeX{} bietet. \texttt{rubber} erkennt
+  selbststÃ¤ndig, welches Grafikformat benÃ¶tigt wird und erzeugt
+  unabhÃ¤ngig vom Namen das Bild als PDF oder PS.
 \end{satz}
 
 \begin{festl}
-  Im Mathematikmodus drückt man mit einem Doppelpunkt \texttt{:} nicht
+  Im Mathematikmodus drÃ¼ckt man mit einem Doppelpunkt \texttt{:} nicht
   unbedingt das aus, was man will. Der Doppelpunk ist der
   Divisionsoperator, wie er z.\,B. in "`$1:2 = 0\mathord{,}5$"'
-  \footnote{Da im Englischen das Komma der Trenner für die
+  \footnote{Da im Englischen das Komma der Trenner fÃ¼r die
     Tausenderstelle ist man \texttt{\textbackslash{}mathord\{,\}} verwenden,
     sonst stimmt der Abstand nicht: $0,5$ (ohne) statt $0\mathord{,}5$
     (mit). Siehe
@@ -445,7 +445,7 @@ verwendet wird.
     {Mathmode von Herbert Voss}\cite{mathmode} Abschnitt
     "`11.4 Dot versus comma"'}
   verwendet wird. Wenn man jedoch $f\colon \R\rightarrow\R$ oder
-  $\{a\colon a\in\N\cap\Q\}$ ausdrücken will, muss man \verb+\colon+
+  $\{a\colon a\in\N\cap\Q\}$ ausdrÃ¼cken will, muss man \verb+\colon+
   verwenden.
 
   Der Unterschied zeigt sich u.\,a. im linken und rechten Abstand
