--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -96,6 +96,16 @@
 \newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
 \newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
+% In der Vorlesung werden offene Intervallenden durch umgekehrte Klammern
+% dargestellt. In TeX hat wohnt aber dem Klammerzeichen bereits eine Bedeutung
+% inne, sprich es gehört zu einer der Klassen öffnenede Klammer oder
+% schließende Klammer. Dementsprechend werden die Abstände um das Zeichen
+% herum gewählt. Damit man nicht immer die Zeichenklasse von Hand ändern muss,
+% sollen diese Befehle verwendet werden.
+\newcommand*{\lsofint}[1]{\mathopen{]}#1]}   % linksseitig offenes Intervall
+\newcommand*{\rsofint}[1]{[#1\mathclose{[}}  % rechtsseitig offenes Intervall
+\newcommand*{\bsofint}[1]{\mathopen{]}#1\mathclose{[}} % beidseitig off. Int.
+
 \makeindex
 
 \SVN $LastChangedRevision$
@@ -346,15 +356,15 @@ bezeichnet. Unten stehen die verschiedenen Arten von Intervallen:
 \item $[a,b] \coloneqq \{x \in \R \colon a \leq x \leq b\}$
   \highl[Intervall!abgeschlossenes]{abgeschlossenes Intervall}
 \item $[a,a] \coloneqq \{a\}$
-\item $[a,b[ \coloneqq \{x \in \R \colon a \leq x < b\}$
+\item $\rsofint{a,b} \coloneqq \{x \in \R \colon a \leq x < b\}$
   \highl[Intervall!halboffenes]{halboffenes Intervall} (wird manchmal auch mit
   $[a,b)$ bezeichnet)
-\item $]a,b] \coloneqq \{x \in \R \colon a < x \leq b\}= (a,b]$
-\item $]a,b[ \coloneqq \{x \in \R \colon a<x<b\}= (a,b)$ \highl[Intervall!offenes]{offenes
+\item $\lsofint{a,b} \coloneqq \{x \in \R \colon a < x \leq b\}= (a,b]$
+\item $\bsofint{a,b} \coloneqq \{x \in \R \colon a<x<b\}= (a,b)$ \highl[Intervall!offenes]{offenes
   Intervall}
 \item $b-a$ Länge des Intervalls
-\item $[a,\infty [ \coloneqq \{x \in \R \colon x \geq a\}$
-\item $]\infty,a] \coloneqq \{x \in \R \colon x \leq a\}$
+\item $\rsofint{a,\infty} \coloneqq \{x \in \R \colon x \geq a\}$
+\item $\lsofint{\infty,a} \coloneqq \{x \in \R \colon x \leq a\}$
 \end{itemize}
 
 \subsubsection{Absoluter Betrag}
@@ -723,7 +733,7 @@ nach dem Komma. Also gilt:
 
 \begin{definition}
   Sei $X$ eine nichtleere Menge oder formal $X\neq\emptyset$. Eine Abbildung
-  $d\colon X \times X \rightarrow [0,\infty [$ heißt \highl{Metrik} oder
+  $d\colon X \times X \rightarrow \rsofint{0,\infty}$ heißt \highl{Metrik} oder
   \highl{Abstand} auf $X$, wenn folgende drei Eigenschaften erfüllt sind:
   \begin{enumerate}[(M1)]
   \item $d(x,y)= 0 \Leftrightarrow x=y$ (\highl{Definitheit})
@@ -2303,7 +2313,7 @@ Beispiele:
 \begin{enumerate}[(i)]
   \item $[a,b]$ ist kompakt, da beschränkt und abgeschlossen.
   \item Endliche Mengen sind kompakt.
-  \item $]0,1]$ ist nicht kompakt.
+  \item $\lsofint{0,1}$ ist nicht kompakt.
 \end{enumerate}
 
 \subsubsection{Gleichmässige Stetigkeit}
@@ -2317,13 +2327,13 @@ Bemerkung: $f$ ist stetig auf $D \perdef \forall x\in D \forall \varepsilon >0 \
 (x)>0 \forall y\in D\colon d(x,y)<\delta_{\varepsilon}(x)\Rightarrow \tilde{d}(f(x),f(y))<\varepsilon$\\
 Offenbar gilt: $f$ ist gleichmässig stetig auf $D\Rightarrow f$ stetig auf $D$. Die Umkehrung gilt im allgemeinen
 nicht.\\
-Beispiel: $D=]0,1]\subset \R =X=Y, f(x)=\frac{1}{x}$\\
-Es gilt, dass $f$ in $]0,1]$ stetig, aber nicht gleichmässig stetig ist.\\
+Beispiel: $D=\lsofint{0,1}\subset \R =X=Y, f(x)=\frac{1}{x}$\\
+Es gilt, dass $f$ in $\lsofint{0,1}$ stetig, aber nicht gleichmässig stetig ist.\\
 \textbf{Negation von gleichmässiger Stetigkeit} $f\colon D\rightarrow Y$ ist auf $D$ nicht gleichmässig stetig:
 \[\exists \varepsilon >0 \forall \delta_{\varepsilon}>0 \exists x_{\delta},y_{\delta}\in D\colon
 |x_{\delta}-y_{\delta}|<\delta \wedge |f(x_{\delta})-f(y_{\delta})|\geq \varepsilon\]
 In unserem Fall sei $\varepsilon=1$. Für $\delta>0$ wählen wir $x_{\delta}=\frac{\min\{1,\delta\}}{1+\delta},
-y_{\delta}=\min\{1,\delta\}\in ]0,1]$\\
+y_{\delta}=\min\{1,\delta\}\in \lsofint{0,1}$\\
 Dann:
 \begin{align*}
   |x_{\delta}-y_{\delta}| & = y_{\delta}-x_{\delta}\\
@@ -2334,7 +2344,7 @@ Dann:
   & = \frac{1}{x_{\delta}}-\frac{1}{y_{\delta}}\\
   & = \frac{1+\delta}{\min\{1,\delta\}}-\frac{1}{\min\{1,\delta\}}\\
   & = \frac{\delta}{\min\{1,\delta\}}\geq \frac{\delta}{\delta}=1\\
-  & \Rightarrow f(x)=\frac{1}{x} \text{ nicht gleichmässig stetig auf } ]0,1]
+  & \Rightarrow f(x)=\frac{1}{x} \text{ nicht gleichmässig stetig auf } \lsofint{0,1}
 \end{align*}
 
 \begin{theorem}
@@ -2380,7 +2390,7 @@ $f$ stetig ist, impliziert, dass $f(K)$ beschränkt ist.
 \end{theorem}
 
 Bemerkung: \autoref{satz:max-fkt} ist im allgemeinen falsch, falls $K$ nicht kompakt ist. Ein Beispiel hierfür ist
-die Funktion $f(x)=\frac{1}{x}$. Diese hat auf dem Intervall $]0,\infty [$ weder ein Maximum noch ein Minimum.
+die Funktion $f(x)=\frac{1}{x}$. Diese hat auf dem Intervall $\bsofint{0,\infty}$ weder ein Maximum noch ein Minimum.
 
 \subsubsection{Ein Satz über inverse Funktionen}
 \begin{theorem}
@@ -2494,9 +2504,9 @@ existiert ein $a\in X$ für das gilt $\lim x_n=a$. Aufgrund der Tatsache, dass $A
 \autoref{satz:abgTeilmenge}, dass $a\in A$ liegt. Daher folgt, dass $A$ abgeschlossen ist.
 
 Beispiele: $X=\R, [a,b]$ ist ein vollständiger metrischer Raum.\\
-$[a,\infty[$ ist ein vollständiger metrischer Raum.\\
-$]\infty,a]$ ist ein vollständiger metrischer Raum.\\
-$]a,\infty[$ ist \emph{kein} vollständiger metrischer Raum.
+$\rsofint{a,\infty}$ ist ein vollständiger metrischer Raum.\\
+$\lsofint{\infty,a}$ ist ein vollständiger metrischer Raum.\\
+$\bsofint{a,\infty}$ ist \emph{kein} vollständiger metrischer Raum.
 
 \begin{theorem}[Banachscher
   Fixpunktsatz\index{Fixpunktsatz!Banachscher}]
@@ -2552,13 +2562,13 @@ Annahme: $\exists a,b\in X\colon f(a)=a,f(b)=b$. Dann:
 \qed
 
 \textbf{Beispiel}: Berechnung von $\sqrt{a}$, Abbildung: $f(x)=\frac{1}{2}(x+\frac{a}{x}),
-x=[\sqrt{a},\infty [, d=|\cdot |$
+x=\rsofint{\sqrt{a},\infty}, d=|\cdot |$
 \begin{enumerate}
-  \item $f([\sqrt{a},\infty [\subset [\sqrt{a},\infty [$
+  \item $f(\rsofint{\sqrt{a},\infty}\subset \rsofint{\sqrt{a},\infty}$
   \item $f$ ist kontrahierend: $|f(x)-f(y)|\leq \frac{1}{2}|x-y|\ \alpha=\frac{1}{2}$
   \item $f(p)=\sqrt{p}, p=\sqrt{a}$ ist ein Fixpunkt.
 \end{enumerate}
-Rechenbeispiel: $a=2, f(x)=\frac{1}{2}(x+\frac{2}{x}), [\sqrt{2},\infty [$
+Rechenbeispiel: $a=2, f(x)=\frac{1}{2}(x+\frac{2}{x}), \rsofint{\sqrt{2},\infty}$
 \begin{align*}
   x_0 & = 2\\
   x_1 & = f(x_0)=f(2)=\nicefrac{3}{2}\\
@@ -2639,8 +2649,8 @@ Für $exp\colon\R\rightarrow\R$ gelten folgende Eigenschaften:
 \begin{theorem}
 \begin{enumerate}[i]
   \item Die Exponentialfunktion $exp\colon \R\rightarrow\R$ ist stetig, streng monoton wach\-send und bildet $\R$ bijektiv auf
-    $]0,\infty[$ ab.
-  \item Die Umkehrfunktion $ln\colon]0,\infty[\rightarrow\R$ ist stetig, monoton wachsend und heißt der \emph{natürliche
+    $\bsofint{0,\infty}$ ab.
+  \item Die Umkehrfunktion $ln\colon\bsofint{0,\infty}\rightarrow\R$ ist stetig, monoton wachsend und heißt der \emph{natürliche
     Logarithmus\index{Logarithmus!natürlicher}}. Es gilt die Funktionalgleichung $ln(xy)=ln(x)+ln(y)$.
 \end{enumerate}
 \end{theorem}
@@ -2656,12 +2666,12 @@ Für $exp\colon\R\rightarrow\R$ gelten folgende Eigenschaften:
     =exp(x_0)$\\
     \textbf{streng monoton wachsend}\\
     $x_0<x_1 \Rightarrow exp(x_1)=exp(x_1-x_0)\cdot exp(x_0)>exp(x_0)\Rightarrow$ streng monoton wachsend\\
-    \textbf{$exp\colon\R\rightarrow ]0,\infty [$ bijektiv}\\
+    \textbf{$exp\colon\R\rightarrow \bsofint{0,\infty}$ bijektiv}\\
     Die Exponentialfunktion ist bijektiv, da sie streng monoton wachsend ist. Ferner gilt: $0<exp(x)<\infty$ für $x\in\R$
     (\autoref{satz:expEigenschaft})
-  \item $ln\coloneqq(exp)^{-1}; ]0,\infty [$ ist stetig und streng monoton wachsend auf jedem kompakten Intervall $[a,b]\subset ]0,
-    \infty [$ (nach \autoref{satz:reellInvFkt})
-    und damit auch auf $]0,\infty [$\\
+  \item $ln\coloneqq(exp)^{-1}; \bsofint{0,\infty}$ ist stetig und streng monoton wachsend auf jedem kompakten Intervall $[a,b]\subset \bsofint{0,
+    \infty}$ (nach \autoref{satz:reellInvFkt})
+    und damit auch auf $\bsofint{0,\infty}$\\
     $x_0<x_1 \Rightarrow f(x_0)<f(x_1)$\\
     Funktionalgleichung:\\
     $exp(ln (x)+ln(y))=exp(ln(x))\cdot exp(ln(y))=x\cdot y$
@@ -2713,10 +2723,10 @@ Für $a,b>0$ und $x,y\in \R$ gilt:
 \end{enumerate}
 \end{theorem}
 
-Es gilt $exp_a \colon\R\rightarrow ]0,\infty [$ ist stetig und bijektiv für $a>0, a\neq 1$. Ferner: streng monoton wachsend
+Es gilt $exp_a \colon\R\rightarrow \bsofint{0,\infty}$ ist stetig und bijektiv für $a>0, a\neq 1$. Ferner: streng monoton wachsend
 für $a>1$ und streng monoton fallend für $a<1$.
 Die Umkehrfunktion $log_a\coloneqq(exp_a)^{-1}$ heißt \emph{Logarithmus\index{Logarithmus}} zur Basis $a$. Es gilt $log_a\colon
-]0,\infty [ \rightarrow \R$ ist stetig und streng monoton wachsend für $a>1$ und streng monoton fallend für $a<1$.\\
+\bsofint{0,\infty} \rightarrow \R$ ist stetig und streng monoton wachsend für $a>1$ und streng monoton fallend für $a<1$.\\
 \textbf{Beweis}: $\log_ax=\frac{ln(x)}{ln(a)}$\\
 $exp_alog_a(x)=exp(\frac{ln(x)}{ln(a)}\cdot ln (a))=exp (ln (x))=x$
 
@@ -2726,7 +2736,7 @@ Sei $\alpha>0$. Dann heißt $f_{\alpha}(x)=x^{\alpha}$ für $x\geq 0$ \emph{Potenz
 mit Exponent\index{Exponent} $\alpha$.
 \end{definition}
 
-Es gilt: $f_{\alpha}[0,\infty [\rightarrow [0,\infty [$ ist stetig, bijektiv und streng monoton
+Es gilt: $f_{\alpha}\rsofint{0,\infty}\rightarrow \rsofint{0,\infty}$ ist stetig, bijektiv und streng monoton
 wachsend.\\
 Beweis: $x^{\alpha}=\text{exp}(\alpha \ln x)=e^{\alpha \ln x}$
 \qed
@@ -3020,8 +3030,8 @@ Beispiele:
       Ableitung von $f$ an der Stelle $x$.
     \item Allgemein durch Induktion: $f\colon D\rightarrow\R$ heißt $k$-mal
       differenzierbar in $x\in D\perdef \exists \varepsilon>0
-      \colon f\colon D\cap ]x-\varepsilon,x+\varepsilon[\rightarrow\R$ ist $(k-1$-mal
-      in $D\cap]x-\varepsilon,x+\varepsilon[$ differenzierbar und die
+      \colon f\colon D\cap \bsofint{x-\varepsilon,x+\varepsilon}\rightarrow\R$ ist $(k-1$-mal
+      in $D\cap\bsofint{x-\varepsilon,x+\varepsilon}$ differenzierbar und die
       $(k-1)$-te Ableitung von $f$ in $x$ differenzierbar ist.
   \end{enumerate}
 \end{definition}
@@ -3032,11 +3042,11 @@ $f,g\colon D\rightarrow\R$ sind $n$-mal differenzierbar. Dann $(f\circ g)^{(n)}
 
 \section{Lokale Extrema, Mittelwertsatz, Konvexität}
 \begin{definition}
-  Eine Funktion $f\colon]a,b[\rightarrow\R$ hat in $x\in ]a,b[$ genau dann
+  Eine Funktion $f\colon\bsofint{a,b}\rightarrow\R$ hat in $x\in \bsofint{a,b}$ genau dann
   ein \emph{lokales (relatives) Maximum/Minimum\index{Maximum!lokales}
   \index{Maximum!relatives}\index{Minimum!lokales}\index{Minimum!relatives}},
   wenn
-  \[\exists \varepsilon>0\,\forall\xi\in ]a,b[\colon|x-\xi|<\varepsilon
+  \[\exists \varepsilon>0\,\forall\xi\in \bsofint{a,b}\colon|x-\xi|<\varepsilon
   \Rightarrow f(\xi)\leq f(x) \text{ bzw. } f(\xi)\geq f(x)\]
   Trifft das $f(\xi)=f(x)$ nur für $\xi=x$ zu, so sagt man in $x$ liegt
   ein isoliertes lokales Maximum/Minimum vor.
@@ -3044,10 +3054,10 @@ $f,g\colon D\rightarrow\R$ sind $n$-mal differenzierbar. Dann $(f\circ g)^{(n)}
 
 \begin{theorem}
   \label{satz:lokExtremum}
-  $f\colon]a,b[\rightarrow\R$ besitze in $x\in ]a,b[$ ein lokales Extremum
+  $f\colon\bsofint{a,b}\rightarrow\R$ besitze in $x\in \bsofint{a,b}$ ein lokales Extremum
   und sei in $x$ differenzierbar. Dann gilt $f'(x)=0$.\\
   \textbf{Beweis}: $f$ habe in $x$ ein lokales Maximum. Dann gilt:
-  \[\exists\varepsilon>0\colon D=]x-\varepsilon,x+\varepsilon[\subset]a,b[
+  \[\exists\varepsilon>0\colon D=\bsofint{x-\varepsilon,x+\varepsilon}\subset\bsofint{a,b}
   \forall\xi\in D\colon f(\xi)\leq f(x)\]
   Somit
   \begin{align*}
@@ -3076,28 +3086,28 @@ Bemerkungen:
 \begin{theorem}
   \begin{enumerate}[(1)]
     \item Satz von Rolle\index{Rolle!Satz von}: Sei $f\colon[a,b]\rightarrow\R$ stetig und sei $f\colon
-      ]a,b[\rightarrow\R$ differenzierbar in $]a,b[$ und $f(a)=f(b)$.
-      Dann existiert $\xi\in ]a,b[\colon f'(\xi)=0$\\
+      \bsofint{a,b}\rightarrow\R$ differenzierbar in $\bsofint{a,b}$ und $f(a)=f(b)$.
+      Dann existiert $\xi\in \bsofint{a,b}\colon f'(\xi)=0$\\
       \textbf{Beweis}:\begin{enumerate}[1. F{a}ll]
 	\item Falls $f$ konstant ist, ist der Beweis trivial.
 	\item Falls $f$ nicht konstant ist, existiert ein $x_0\in
-	  ]a,b[\colon f(x_0)>f(a)$. Dann wird das absolute Maximum/Minimum von
-	  $f\colon[a,b]\rightarrow\R$ in einem Punkt $\xi\in]a,b[$
+	  \bsofint{a,b}\colon f(x_0)>f(a)$. Dann wird das absolute Maximum/Minimum von
+	  $f\colon[a,b]\rightarrow\R$ in einem Punkt $\xi\in\bsofint{a,b}$
 	  angenommen. Nach \autoref{satz:lokExtremum} gilt $f'(\xi)=0$.
       \end{enumerate}
     \item Mittelwertsatz\index{Mittelwertsatz}: Sei $f\colon[a,b]\rightarrow\R$ stetig und sei $f\colon
-      ]a,b[\rightarrow\R$ differenzierbar in $]a,b[$ und $f(a)=f(b)$. Dann
-      existiert $\xi\in]a,b[\colon\frac{f(b)-f(a)}{b-a}=f'(\xi)$\\
+      \bsofint{a,b}\rightarrow\R$ differenzierbar in $\bsofint{a,b}$ und $f(a)=f(b)$. Dann
+      existiert $\xi\in\bsofint{a,b}\colon\frac{f(b)-f(a)}{b-a}=f'(\xi)$\\
       \textbf{Beweis}: Aus dem Punkt 3 folgt der Punkt 2 mit $g(x)=x$.
     \item 2. Mittelwertsatz: Seien $f,g\colon[a,b]\rightarrow\R$ stetig und 
-      in $]a,b[$ differenzierbar und sei $g'(\xi)\neq 0$ in $]a,b[$. 
-      Dann existiert $\xi\in]a,b[\colon\frac{f(b)-f(a)}{g(b)-g(a)}=
+      in $\bsofint{a,b}$ differenzierbar und sei $g'(\xi)\neq 0$ in $\bsofint{a,b}$. 
+      Dann existiert $\xi\in\bsofint{a,b}\colon\frac{f(b)-f(a)}{g(b)-g(a)}=
       \frac{f'(\xi)}{g'(\xi)}$.\\
-      \textbf{Beweis}: Wegen $g'\neq 0$ in $]a,b[$ folgt nach dem 
+      \textbf{Beweis}: Wegen $g'\neq 0$ in $\bsofint{a,b}$ folgt nach dem 
       ersten Punkt $g(b)\neq g(a)$. Betrachten $\varphi(x)\coloneqq f(x)-f(x)-
       \frac{f(b)-f(a)}{g(b)-g(a)}(g(x)-g(a))$. Die Funktion $\varphi\colon
-      [a,b]\rightarrow\R$ ist stetig und in $]a,b[$ differenzierbar und
-      es gilt $\varphi (a)=\varphi(b)=0\Rightarrow \exists\xi\in]a,b[\colon
+      [a,b]\rightarrow\R$ ist stetig und in $\bsofint{a,b}$ differenzierbar und
+      es gilt $\varphi (a)=\varphi(b)=0\Rightarrow \exists\xi\in\bsofint{a,b}\colon
       0=\varphi'(\xi)=f'(\xi)-\frac{f(b)-f(a)}{g(b)-g(a)}g'(\xi)
       \Rightarrow \frac{f(b)-f(a)}{g(b)-g(a)}=\frac{f'(\xi)}{g'(\xi)}$
   \end{enumerate}
@@ -3106,12 +3116,12 @@ Bemerkungen:
 
 Folgerung:
 \begin{enumerate}[(1)]
-  \item Sei $f\colon[a,b]\rightarrow\R$ stetig und $f'=0$ in $]a,b[
+  \item Sei $f\colon[a,b]\rightarrow\R$ stetig und $f'=0$ in $\bsofint{a,b}
     \Rightarrow f(x)=c$ konstant auf $[a,b]$\\
-    Beweis: Sei $x\in]a,b]$ beliebig. Wir betrachten das Intervall $[a,x]$
-    Nach dem Mittelwertsatz existiert ein $\xi\in]a,x[\subset]a,b[\colon
+    Beweis: Sei $x\in\lsofint{a,b}$ beliebig. Wir betrachten das Intervall $[a,x]$
+    Nach dem Mittelwertsatz existiert ein $\xi\in\bsofint{a,x}\subset\bsofint{a,b}\colon
     \frac{f(x)-f(a)}{x-a}=f'(\xi)=0\Rightarrow f(x)=f(a) \forall x\in
-    ]a,b]\Rightarrow f(x)=f(a)\,\forall x\in[a,b]$ wegen der Stetigkeit.
+    \lsofint{a,b}\Rightarrow f(x)=f(a)\,\forall x\in[a,b]$ wegen der Stetigkeit.
   \item Sei $f\colon\R\rightarrow\R$ differenzierbar und genüge der
     Differentialgleichung $f'=f$ auf $\R$ mit $f(0)=1$. Dann ist
     $f(x)=e^x$.\\
@@ -3147,22 +3157,22 @@ Beispiel: \[\lim_{x\rightarrow 0} \frac{e^x-1}{x}=\lim_{x\rightarrow 0}
 \subsection{Monotonie differenzierbarer Funktionen}
 \begin{theorem}
   \label{satz:monoton}
-  Sei $f\colon[a,b]\rightarrow\R$ stetig und in $]a,b[$ differenzierbar. Dann
+  Sei $f\colon[a,b]\rightarrow\R$ stetig und in $\bsofint{a,b}$ differenzierbar. Dann
   gilt:
   \begin{enumerate}
-    \item $\forall x \in ]a,b[\colon f'(x)\geq \Rightarrow f$ auf $[a,b]$
+    \item $\forall x \in \bsofint{a,b}\colon f'(x)\geq \Rightarrow f$ auf $[a,b]$
       monoton wachsend
-    \item $\forall x \in ]a,b[\colon f'(x)> \Rightarrow f$ auf $[a,b]$ 
+    \item $\forall x \in \bsofint{a,b}\colon f'(x)> \Rightarrow f$ auf $[a,b]$ 
       streng monoton wachsend
-    \item $\forall x \in ]a,b[\colon f'(x)\leq \Rightarrow f$ auf $[a,b]$
+    \item $\forall x \in \bsofint{a,b}\colon f'(x)\leq \Rightarrow f$ auf $[a,b]$
       monoton fallend
-    \item $\forall x \in ]a,b[\colon f'(x)< \Rightarrow f$ auf $[a,b]$
+    \item $\forall x \in \bsofint{a,b}\colon f'(x)< \Rightarrow f$ auf $[a,b]$
       streng monoton fallend
   \end{enumerate}
   \textbf{Beweis} (für den zweiten Fall): Sei $f'(x)>0$ für alle $x\in
-  ]a,b[$. Man nehme an, dass $f$ nicht streng monoton wachsend ist. Dann
-  existiert $x_1,x_2\in]a,b[\colon x_1<x_2\wedge f(x_1)\geq f(x_2)$. Nach dem
-  Mittelwertsatz folgt: $\exists \xi\in]a,b[\colon\frac{f(x_2)-f(x_1)}{x_2-x_1}
+  \bsofint{a,b}$. Man nehme an, dass $f$ nicht streng monoton wachsend ist. Dann
+  existiert $x_1,x_2\in\bsofint{a,b}\colon x_1<x_2\wedge f(x_1)\geq f(x_2)$. Nach dem
+  Mittelwertsatz folgt: $\exists \xi\in\bsofint{a,b}\colon\frac{f(x_2)-f(x_1)}{x_2-x_1}
   =f'(\xi)\leq 0$\textnormal{\lightning}
   \qed
 \end{theorem}
@@ -3170,7 +3180,7 @@ Beispiel: \[\lim_{x\rightarrow 0} \frac{e^x-1}{x}=\lim_{x\rightarrow 0}
 \subsection{Hinreichende Bedingungen für lokale Extrema}
 \begin{theorem}
   \label{satz:lokExtrema}
-  Sei $f\colon]a,b[\rightarrow\R$ differenzierbar. In $x \in ]a,b[$ sei $f$
+  Sei $f\colon\bsofint{a,b}\rightarrow\R$ differenzierbar. In $x \in \bsofint{a,b}$ sei $f$
   zweimal differenzierbar und es gelte, $f'(x)=0$ und $f''(x)\neq 0$.
   Dann besitzt $f$ in $x$ ein isoliertes lokales Extremum.\\
   \textbf{Beweis}: Sei $f''(x)>0$. Wegen $f''(x)=\lim_{\xi\rightarrow x}
@@ -3249,7 +3259,7 @@ Eine lineare Funktion $f(x)=ax+b$ ist sowohl konvex als auch konkav.
 	  monoton wachsend. Seien $x_1,x_2\in D, 0<\Theta<1$ und 
 	  $x=(1-\Theta)x_2+\Theta x_1$.\\
 	  O.\,B.\,d.\,A. sei $x_1<x_2$. Dann folgt nach dem Mittelwertsatz:
-	  $\exists\xi_1\in]x_1,x[, \xi_2\in]x,x_2[\colon
+	  $\exists\xi_1\in\bsofint{x_1,x}, \xi_2\in\bsofint{x,x_2}\colon
 	  \frac{f(x)-f(x_1)}{x-x_1}=f'(\xi_1)\leq f'(\xi_2)=
 	  \frac{f(x_2)-f(x)}{x_2-x}$. Mit $x-x_1=(1-\Theta)(x_2-x_1)$
 	  und $x_2-x=\Theta(x_2-x_1)$ folgt $\frac{f(x)-f(x_1)}{1-\Theta}
@@ -3263,10 +3273,10 @@ Eine lineare Funktion $f(x)=ax+b$ ist sowohl konvex als auch konkav.
 
 \subsection{Wendepunkt}
 \begin{definition}
-  Eine Funktion $f\colon]a,b[\rightarrow\R$ hat in $x_0\in]a,b[$ genau dann
+  Eine Funktion $f\colon\bsofint{a,b}\rightarrow\R$ hat in $x_0\in\bsofint{a,b}$ genau dann
   einen \emph{Wendepunkt\index{Wendepunkt}}, wenn ein $\varepsilon>0$
-  mit der Eigenschaft existiert, dass $f$ auf $]x_0-\varepsilon,x_0]$
-  konkav und $f$ auf $[x_0.x+\varepsilon[$ konvex ist oder dies auf
+  mit der Eigenschaft existiert, dass $f$ auf $\lsofint{x_0-\varepsilon,x_0}$
+  konkav und $f$ auf $\rsofint{x_0,x+\varepsilon}$ konvex ist oder dies auf
   $(-f)$ zutrifft.
 \end{definition}
 
@@ -3274,15 +3284,15 @@ Bemerkung:
 \begin{itemize}
   \item Nach der obigen Definition hat eine lineare Funktion
     $f(x)=cx+d$  in jedem Punkt einen Wendepunkt.
-  \item Ist $f$ auf $]x_0-\varepsilon,x_0]$ streng konkav und auf
-    $[x_0,x_0+\varepsilon[$ streng konvex, so liegt ein isolierter
+  \item Ist $f$ auf $\lsofint{x_0-\varepsilon,x_0}$ streng konkav und auf
+    $\rsofint{x_0,x_0+\varepsilon}$ streng konvex, so liegt ein isolierter
     Wendepunkt vor.
 \end{itemize}
 
 \subsection{Hinreichende Bedingungen für (isolierte) Wendepunkte}
 \begin{theorem}
   \begin{enumerate}[(i)]
-    \item Sei $f\colon]a,b[\rightarrow\R$ in $x_0\in]a,b[$ differenzierbar.
+    \item Sei $f\colon\bsofint{a,b}\rightarrow\R$ in $x_0\in\bsofint{a,b}$ differenzierbar.
       $f$ besitzt in $x_0$ einen Wendepunkt, falls ein $\varepsilon>0$
       existiert und für $0<|h|<\varepsilon$ stets
       \begin{enumerate}[(1)]
@@ -3300,24 +3310,24 @@ Bemerkung:
       \end{align*}
       $h\coloneqq x-x_0$\\
       Tangente in $(x_0,f(x_0))$: $y=f(x_0)+f'(x_0)(x-x_0)$
-    \item Sei $f\colon]a,b[\rightarrow\R$ differenzierbar. Dann besitzt $f$
-      in $x_0\in]a,b[$ einen Wendepunkt, wenn $f'\colon]a,b[\rightarrow\R$
+    \item Sei $f\colon\bsofint{a,b}\rightarrow\R$ differenzierbar. Dann besitzt $f$
+      in $x_0\in\bsofint{a,b}$ einen Wendepunkt, wenn $f'\colon\bsofint{a,b}\rightarrow\R$
       in $x_0$ ein isoliertes lokales Extremum hat.\\
       \textbf{Beweis}: Habe $f'$ in $x_0$ ein isoliertes lokales Maximum,
       d.\,h. es existiert ein $\varepsilon>0\colon f'(\xi)<f'(x_0)$ für $0<
       |\xi-x_0|<\varepsilon$. Sei $|h|<\varepsilon$, dann folgt nach dem
-      Mittelwertsatz: $\exists\xi_0\in ]x_0,x_0+h[$ für $h>0$ bzw.
-      $\xi_0\in ]x_0+h,x_0[$ für $h<0$ mit $\frac{f(x_0+h)-f(x_0)}{h}
+      Mittelwertsatz: $\exists\xi_0\in \bsofint{x_0,x_0+h}$ für $h>0$ bzw.
+      $\xi_0\in \bsofint{x_0+h,x_0}$ für $h<0$ mit $\frac{f(x_0+h)-f(x_0)}{h}
       =f'(\xi_0)<f'(x_0)$. Nach (i)(2) folgt: Übergang von konvex in
       konkav. Analog kann man dies für das isolierte lokale Minimum
       zeigen.
-    \item Sei $f\colon]a,b[\rightarrow\R$ in $]a,b[$ zweimal differenzierbar.
+    \item Sei $f\colon\bsofint{a,b}\rightarrow\R$ in $\bsofint{a,b}$ zweimal differenzierbar.
       \begin{enumerate}[(1)]
 	\item Ist $f''(x)>0$ für $x<x_0$ und $f''(x)<0$ für $x>x_0$, so
 	  hat $f$ in $x_0$ einen Wendepunkt (Übergang konkav nach konvex).
 	\item Ist $f''(x)<0$ für $x<x_0$ und $f''(x)>0$ für $x>x_0$, so
 	  hat $f$ in  $x_0$ einen Wendepunkt (Übergang konvex nach konkav).
-	\item Sei $f\colon]a,b[\rightarrow\R$ dreimal differenzierbar. Ist
+	\item Sei $f\colon\bsofint{a,b}\rightarrow\R$ dreimal differenzierbar. Ist
 	  $f''(x_0)=0$ und $f'''(x_0)\neq 0$, so hat $f$ in $x_0$
 	  einen Wendepunkt.
 	  \begin{itemize}
