Schließende Klammer ohnen öffnende entfernen
Ich sehe nicht, warum an der Stelle eine Klammerung notwendig ist. Daher
entferne ich die Klammer und füge keine öffnende hinzu.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1784 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/laue-algogeo/skript.tex
+++ b/laue-algogeo/skript.tex
@@ -450,7 +450,7 @@ h &= \{x \in \R^d | a^Tx = \alpha\} \\
 &= \{x \in \R^d | (a_1, a_2, ... , a_d)^Tx = \alpha\} (\text{mit } a_d \neq 0)\\
 &= \{x \in \R^d | a_1 x_1 + a_2x_2 + ... +a_d x_d = \alpha\}  \\
 &= \{x \in \R^d | x_d = \frac{1}{a_d} (a_1x_1 + a_2x_2 + ... + a_{d-1} x_{d-1} - \alpha)\}  \\
-&= \{x \in \R^d | x_d = b_1x_1 + b_2x_2 + ... + b_{d-1} x_{d-1} - \beta)\}  \\
+&= \{x \in \R^d | x_d = b_1x_1 + b_2x_2 + ... + b_{d-1} x_{d-1} - \beta\}  \\
 &= \text{ Graph einer affinen Abbildung } \R^{d-1} \rightarrow \R
 \end{split}
 \end{equation*}
